<resources>
    <string name="app_name">LMS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logIn">Log In</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="signIn">Sign In</string>

    <string name="purposeOfLeaveTxt">Purpose of Leave(Max 500 Characters</string>
    <string name="purposeofLeaveHint">Purpose of Leave</string>
    <string name="fromText">From</string>
    <string name="toText">To</string>
    <string name="dateFormat">DD-MM-YYYY</string>


    <string name="typeofLeaveText">Type of Leave</string>
    <string name="yearly_leave_eligibility">Yearly leave Eligibilty</string>
    <string name="leave_already_taken">Leave Already Taken</string>
    <string name="leave_remaining">Leave Remaining</string>

    <string name="contact_details">Contact Details</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="email">Email</string>

    <string name="reliever_name">Reliever Name</string>
    <string name="list_of_job">List Of Job/Activities</string>
    <string name="applicant_notes">Applicant Notes</string>

    <!--array -->
    <string-array name="deptArray">
        <item>--Select a option--</item>
        <item>DEFSSLPO</item>
        <item>APP.Authentication</item>
    </string-array>


    <!-- Drawer Items -->
    <string name="drawer_item_compact_header">CompactHeader Sample</string>
    <string name="drawer_item_action_bar">ActionBar Sample</string>
    <string name="drawer_item_multi_drawer">MultiDrawer Sample</string>
    <string name="drawer_item_non_translucent_status_drawer">NonTranslucentStatusDrawer Sample</string>
    <string name="drawer_item_complex_header_drawer">ComplexHeaderDrawer Sample</string>
    <string name="drawer_item_simple_fragment_drawer">SimpleFragment Sample</string>
    <string name="drawer_item_embedded_drawer">EmbeddedDrawer Sample</string>
    <string name="drawer_item_fullscreen_drawer">FullScreen Sample</string>
    <string name="drawer_item_leave_apply">Leave Apply</string>
    <string name="drawer_item_relieve">Relieve</string>
    <string name="drawer_item_approve">Approve</string>
    <string name="drawer_item_my_leave">My Leave</string>
    <string name="drawer_item_log_out">Log out</string>
    <string name="drawer_item_home">Home</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_leave_apply">Leave Apply</string>
    <string name="title_activity_approve">Approve</string>
    <string name="title_activity_relieve">Relieve</string>
    <string name="title_activity_myleave">Myleave</string>
    <string name="title_activity_apply2">Apply2</string>
    <string name="title_activity_apply3">Apply3</string>


</resources>
