<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context="com.yusuf.iit.du.lms.Apply2">

    <android.support.v7.widget.Toolbar
        android:id="@+id/applyToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ColorAccent"
        android:elevation="10dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/applyToolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/typeOfLeaveText"
                android:text="@string/typeofLeaveText"
                android:textSize="30dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/greenDark"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/typeofleaveSpinner"
                android:layout_toRightOf="@+id/typeOfLeaveText"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:drawableRight="@android:drawable/arrow_down_float"
                android:background="@drawable/editboxwhite"
                ></Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/leaveEligibiltyText"
                android:layout_below="@id/typeOfLeaveText"
                android:text="@string/yearly_leave_eligibility"
                android:layout_marginTop="25dp"
                android:textSize="20dp"
                android:textColor="@color/material_blue_grey_800"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/leaveEligibiltyText"
                android:id="@+id/leaveEligibiltyShow"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/leaveTakenText"
                android:layout_below="@+id/leaveEligibiltyText"
                android:text="@string/leave_already_taken"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/material_blue_grey_800"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/leaveEligibiltyText"
                android:id="@+id/leaveTakenShow"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/leaveRemainingText"
                android:layout_below="@id/leaveTakenText"
                android:text="@string/leave_remaining"
                android:layout_marginTop="10dp"
                android:textSize="20dp"
                android:textColor="@color/material_blue_grey_800"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/leaveEligibiltyText"
                android:id="@+id/leaveRemainingShow"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/contactDetailsText"
                android:textSize="30dp"
                android:layout_below="@+id/leaveRemainingText"
                android:text="@string/contact_details"
                android:layout_marginTop="20dp"
                android:textColor="@color/greenDark"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/addressEditText"
                android:ems="10"
                android:layout_below="@+id/contactDetailsText"
                android:hint="@string/address"
                android:textColor="@color/colorTextPrimary"
                android:drawableLeft="@android:drawable/ic_menu_edit"
                android:inputType="text"
                android:background="@drawable/edittext"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="50dp"
                android:textSize="15sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/phoneEditText"
                android:ems="10"
                android:layout_below="@+id/addressEditText"
                android:hint="@string/phone"
                android:textColor="@color/colorTextPrimary"
                android:drawableLeft="@android:drawable/stat_sys_vp_phone_call"
                android:textSize="15sp"
                android:inputType="phone"
                android:background="@drawable/edittext"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="50dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/mobileEditText"
                android:ems="10"
                android:layout_below="@+id/phoneEditText"
                android:hint="@string/mobile_no"
                android:textColor="@color/colorTextPrimary"
                android:drawableLeft="@android:drawable/stat_sys_vp_phone_call"
                android:textSize="15sp"
                android:inputType="phone"
                android:background="@drawable/edittext"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="50dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/emailEditText"
                android:ems="10"
                android:layout_below="@+id/mobileEditText"
                android:hint="@string/email"
                android:textColor="@color/colorTextPrimary"
                android:drawableLeft="@android:drawable/sym_action_email"
                android:textSize="15sp"
                android:inputType="phone"
                android:background="@drawable/edittext"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="50dp"/>
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nextButton2"
                android:layout_below="@id/emailEditText"
                android:layout_centerHorizontal="true"
                android:src="@drawable/nextbutton"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="25dp"
                />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancelButton2"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/cancelbutton"

                />
            <com.getbase.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/previousButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/previousbutton"

                />


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>
