<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    tools:context="com.yusuf.iit.du.lms.Apply3">

    <android.support.v7.widget.Toolbar
        android:id="@+id/applyToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/ColorAccent"
        android:elevation="10dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relieverText"
        android:text="@string/reliever_name"
        android:textSize="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_below="@+id/applyToolbar"
        android:textColor="@color/greenDark"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/relieverNameSpinner"

        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="50dp"

        android:drawableRight="@android:drawable/arrow_down_float"
        android:background="@drawable/editboxwhite"
        android:layout_below="@+id/relieverText"
        ></Spinner>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listOfJobText"
        android:textSize="30dp"
        android:layout_below="@+id/relieverNameSpinner"
        android:text="@string/list_of_job"
        android:layout_marginTop="20dp"
        android:textColor="@color/greenDark"
        android:layout_marginLeft="16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/listOfJobEditText"
        android:ems="10"
        android:layout_below="@+id/listOfJobText"

        android:textColor="@color/colorTextPrimary"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:inputType="text"
        android:background="@drawable/editboxwhite"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="50dp"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/applicantNotesText"
        android:textSize="30dp"
        android:layout_below="@+id/listOfJobEditText"
        android:text="@string/applicant_notes"
        android:layout_marginTop="20dp"
        android:textColor="@color/greenDark"
        android:layout_marginLeft="16dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/applicantNotesEditText"
        android:ems="10"
        android:layout_below="@+id/applicantNotesText"

        android:textColor="@color/colorTextPrimary"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:inputType="text"
        android:background="@drawable/editboxwhite"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="50dp"
        android:textSize="15sp"/>
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextButton2"
        android:layout_below="@id/emailEditText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/submitbutton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentBottom="true"
        />
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton2"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cancelbutton"

        />
    <com.getbase.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previousButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/previousbutton"

        />

</RelativeLayout>
